Add swagger doc to update status route
